# hPong

./: README.md  pyproject.toml
best/: ffn_pong_best.pt
src/: PongSim.py  data.py  dit.py  ffn.py  generate_data.py  models.py  rotary_embedding_torch.py  test.py  test_dit.py  test_ffn.py  test_vae.py  train.py  train_dit.py  train_vae.py  util.py  vae.py
